--- a/index2.html
+++ b/index2.html
@@ -56,51 +56,53 @@
             <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-3">
-
-                  </div>
-                  <div class="col-md-9">
-        
-                  </div>
-                </div>
                     <form class= "bg-dark">
-                        <p>Filter Search</p>
+                        <p>Filter Search</p>         
+                    <ul class="list-group bg-dark">
+                        <li class="list-group-item bg-dark">
+                            <label for="date">Enter Date</label>
+                            <input type="text" placeholder="1/10/2010" id="datetime" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                        <label for="city">Enter a City</label>
+                        <input type="text" placeholder="" id="city" />     
+                        </li>
+                        <li class="list-group-item bg-dark">
+                        <label for="state">Enter a State</label>
+                        <input type="text" placeholder="" id="state" />     
+                        </li>
+                        <li class="list-group-item bg-dark">
+                        <label for="country">Enter a Country</label>
+                        <input type="text" placeholder="" id="country" />     
+                        </li>
+                        <li class="list-group-item bg-dark">
+                        <label for="shape">Enter a Shape</label>
+                        <input type="text" placeholder="" id="shape" />     
+                        </li>
+                    </ul>
                     </form>
-              </div>
-
-
-    <form class= "bg-dark">         
-    <ul class="list-group bg-dark">
-        <li class="list-group-item bg-dark">
-            <label for="date">Enter Date</label>
-            <input type="text" placeholder="1/10/2010" id="datetime" />
-        </li>
-        <li class="list-group-item bg-dark">
-            <button id="filter-btn" type="button" class="btn-dark">Filter Table</button>      
-        </li>
-    </ul>
-    </form>
-
-
-    <div class="col-md-9">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Date</th>
-              <th>City</th>
-              <th>State</th>
-              <th>Country</th>
-              <th>Shape</th>
-              <th>Duration</th>
-              <th>Comments</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
+                </div>
+                  
+                <div class="col-md-9">
+                    <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th>Date</th>
+                            <th>City</th>
+                            <th>State</th>
+                            <th>Country</th>
+                            <th>Shape</th>
+                            <th>Duration</th>
+                            <th>Comments</th>
+                          </tr>
+                        </thead>
+                        <tbody></tbody>
+                      </table>
+                    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.0/d3.js"></script>
-    <script src="C:\Users\isabe\Desktop\Analysis_Projects\UFOs\static\js\data.js"></script>
-    <script src="C:\Users\isabe\Desktop\Analysis_Projects\UFOs\static\js\app.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
 
 </body>
 </html>
